[tool.robotpy-build.metadata]
name = "robotpy-photonvision"
description = "RobotPy wrappers for PhotonVision"
author = "RobotPy Development Team"
author_email = "robotpy@googlegroups.com"
url = "https://github.com/robotpy/robotpy-photonvision"
license = "MIT"
install_requires = [
    "robotpy-wpiutil<2025.0.0,>=2024.3.2",
    "robotpy-wpimath<2025.0.0,>=2024.3.2",
    "robotpy-cscore<2025.0.0,>=2024.3.2",
    "robotpy-apriltag<2025.0.0,>=2024.3.2",
    "wpilib<2025.0.0,>=2024.3.2",
]

[build-system]
requires = [
    "robotpy-build<2025.0.0,~=2024.0.0",
    "robotpy-wpiutil<2025.0.0,~=2024.3.2",
    "robotpy-wpimath<2025.0.0,~=2024.3.2",
    "robotpy-cscore<2025.0.0,~=2024.3.2",
    "robotpy-apriltag<2025.0.0,~=2024.3.2",
    "wpilib<2025.0.0,~=2024.3.2",
]

[tool.robotpy-build]
base_package = "photonvision"


[tool.robotpy-build.wrappers."photonvision".maven_lib_download]
artifact_id = "photonlib-cpp"
group_id = "org.photonvision"
repo_url = "https://maven.photonvision.org/repository/internal"
version = "v2024.3.1"
libs = ["photonlib"]

[[tool.robotpy-build.wrappers."photonvision".maven_lib_download.header_patches]]
patch = "photonvision/src/PhotonPoseEstimator.h.patch"

[tool.robotpy-build.static_libs."opencv_cpp".maven_lib_download]
artifact_id = "opencv-cpp"
group_id = "edu.wpi.first.thirdparty.frc2024.opencv"
repo_url = "https://frcmaven.wpi.edu/artifactory/release"
version = "4.8.0-1"
libs = ["opencv480"]


[tool.robotpy-build.wrappers."photonvision"]
name = "photonvision"

depends = [
    "wpilibc",
    "wpilib_core",
    "wpimath_cpp",
    "wpiHal",
    "ntcore",
    "wpiutil",
    "wpimath_geometry",
    "apriltag",
    "photonvision_targeting",
    "cscore",
    "opencv_cpp",
]


sources = [
    "photonvision/src/module.cpp",
    "photonvision/cvnp/cvnp.cpp",
    "photonvision/cvnp/cvnp_synonyms.cpp",
]

extra_includes = [
"photonvision/targeting/include",
]


generation_data = "gen"

[tool.robotpy-build.wrappers."photonvision".autogen_headers]
# photonlib
PhotonVersion        = "PhotonVersion.h"
PhotonCamera         = "photon/PhotonCamera.h"
PhotonPoseEstimator  = "photon/PhotonPoseEstimator.h"
PhotonTargetSortMode = "photon/PhotonTargetSortMode.h"
PhotonUtils          = "photon/PhotonUtils.h"


[[tool.robotpy-build.wrappers."photonvision".type_casters]]
header = "cvnp/cvnp.h"
types = ["cv::Mat"]


[tool.robotpy-build.wrappers."photonvision.targeting"]
name = "photonvision_targeting"

depends = [
    "wpilibc",
    "wpilib_core",
    "wpimath_cpp",
    "wpiHal",
    "ntcore",
    "wpiutil",
    "wpimath_geometry",
    "apriltag",
    "cscore",

]

sources = [
    "photonvision/targeting/src/module.cpp",
]

generation_data = "gen"

[tool.robotpy-build.wrappers."photonvision.targeting".maven_lib_download]
artifact_id = "photontargeting-cpp"
group_id = "org.photonvision"
repo_url = "https://maven.photonvision.org/repository/internal"
version = "v2024.3.1"
libs = ["photontargeting"]



[tool.robotpy-build.wrappers."photonvision.targeting".autogen_headers]
# photontargeting
PNPResult            = "photon/targeting/PNPResult.h"
PhotonTrackedTarget  = "photon/targeting/PhotonTrackedTarget.h"
PhotonPipelineResult = "photon/targeting/PhotonPipelineResult.h"
MultiTargetPNPResult = "photon/targeting/MultiTargetPNPResult.h"


