[tool.robotpy-build.metadata]
name = "robotpy-photonvision"
description = "RobotPy wrappers for PhotonVision"
author = "RobotPy Development Team"
author_email = "robotpy@googlegroups.com"
url = "https://github.com/robotpy/robotpy-photonvision"
license = "MIT"
install_requires = [
    "pyntcore<2026.0.0,>=2025.0.0b1",
    "robotpy-wpinet<2026.0.0,>=2025.0.0b1",
    "robotpy-wpiutil<2026.0.0,>=2025.0.0b1",
    "wpilib<2026.0.0,>=2025.0.0b1",
]

[build-system]
requires = [
    "robotpy-build<2026.0.0,>=2025.0.0a1",
    "pyntcore<2026.0.0,>=2025.0.0b1",
    "robotpy-wpinet<2026.0.0,>=2025.0.0b1",
    "robotpy-wpiutil<2026.0.0,>=2025.0.0b1",
    "wpilib<2026.0.0,>=2025.0.0b1",
]

[tool.robotpy-build]
base_package = "photonvision"
update_init = ["photonvision.targeting photonvision.targeting._photonvision_targeting"]

# ======================== Begin photon-targeting stuff ========================

[tool.robotpy-build.wrappers."photonvision.targeting"]
name = "photonvision_targeting"

depends = [
    "wpilibc",
    "wpilib_core",
    "ntcore",
    "wpinet",
    "wpiutil",
]

sources = [
  "photonvision/targeting/src/module.cpp",
]

generation_data = "gen/photontargeting"

[tool.robotpy-build.wrappers."photonvision.targeting".maven_lib_download]
artifact_id = "photontargeting-cpp"
group_id = "org.photonvision"
repo_url = "https://maven.photonvision.org/snapshots"
version = "dev-v2025.0.0-beta-2-10-gdfed7e36"
libs = ["photontargeting"]
[[tool.robotpy-build.wrappers."photonvision.targeting".maven_lib_download.header_patches]]
# TODO This patch takes out the default argument to the constructor. Put it back!!
patch = "patches/no-wpi-print-incl.patch"
strip = 6


[tool.robotpy-build.wrappers."photonvision.targeting".autogen_headers]
# photontargeting
TimeSyncStructs     = "net/TimeSyncStructs.h"
TimeSyncClient      = "net/TimeSyncClient.h"
