[tool.robotpy-build.metadata]
name = "robotpy-photonvision"
description = "RobotPy wrappers for PhotonVision"
author = "RobotPy Development Team"
author_email = "robotpy@googlegroups.com"
url = "https://github.com/robotpy/robotpy-photonvision"
license = "MIT"
install_requires = [
    "pyntcore<2026.0.0,>=2025.0.0b1",
    "robotpy-apriltag<2026.0.0,>=2025.0.0b1",
    "robotpy-wpimath<2026.0.0,>=2025.0.0b1",
    "robotpy-wpinet<2026.0.0,>=2025.0.0b1",
    "robotpy-wpiutil<2026.0.0,>=2025.0.0b1",
    "wpilib<2026.0.0,>=2025.0.0b1",
]

[build-system]
requires = [
    "robotpy-build<2026.0.0,>=2025.0.0a1",
    "pyntcore<2026.0.0,>=2025.0.0b1",
    "robotpy-apriltag<2026.0.0,>=2025.0.0b1",
    "robotpy-wpimath<2026.0.0,>=2025.0.0b1",
    "robotpy-wpinet<2026.0.0,>=2025.0.0b1",
    "robotpy-wpiutil<2026.0.0,>=2025.0.0b1",
    "wpilib<2026.0.0,>=2025.0.0b1",
]

[tool.robotpy-build]
base_package = "photonvision"
update_init = ["photonvision.timesync photonvision.timesync._photonvision_timesync"]

# ======================== Begin photon-timesync stuff ========================

[tool.robotpy-build.wrappers."photonvision.timesync"]
name = "photonvision_timesync"

depends = [
    "ntcore",
    "wpimath",
    "wpinet",
    "wpiutil",
]

sources = [
  "photonvision/timesync/src/module.cpp",
]

generation_data = "gen/photontimesync"

[tool.robotpy-build.wrappers."photonvision.timesync".maven_lib_download]
artifact_id = "photontargeting-cpp"
group_id = "org.photonvision"
repo_url = "https://maven.photonvision.org/snapshots"
version = "dev-v2025.0.0-beta-3-11-g57621671"
libs = ["photontargeting"]
[[tool.robotpy-build.wrappers."photonvision.timesync".maven_lib_download.header_patches]]
# TODO This patch takes out the default argument to the constructor. Put it back!!
patch = "patches/no-wpi-print-incl.patch"
strip = 6


[tool.robotpy-build.wrappers."photonvision.timesync".autogen_headers]
# photontargeting
TimeSyncStructs     = "net/TimeSyncStructs.h"
TimeSyncClient      = "net/TimeSyncClient.h"
TimeSyncServer      = "net/TimeSyncServer.h"
